# instagram-logger

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
.omc/: SESSION_HANDOFF.md
.omc/plans/: brief.md  extension-pivot-consensus.md  extension-pivot.md  plan.md
.omc/research/: critic-review.md  summary.md
.omc/specs/: deep-interview-extension-pivot.md
backend/: __init__.py  config.py  ingest_state.py  main.py
backend/api/: auth.py  collections.py  ingest_extension.py  ingest_status.py  media.py  posts.py
backend/db/: __init__.py  connection.py  migrate.py  repo.py
backend/db/migrations/: 001_init.sql  002_extension_state.sql  003_ingest_meta.sql
backend/ig_client/: __init__.py  client.py  fake.py  import_session.py  login.py  placeholder.py  session.py  smoke_instaloader.py
backend/ingest/: __init__.py  __main__.py  reconcile.py  run.py
backend/media/: __init__.py  from_upload.py  store.py
backend/notify/: telegram.py
backend/scheduler/: __init__.py
data/: .gitignore
extension/: README.md  manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/src/: background.ts  env.d.ts  offscreen.html  offscreen.ts
extension/src/content/: auth-watch.ts  post-detail.ts  saved-grid.ts
extension/src/lib/: api.ts  hash.ts  jitter.ts  redact.ts  storage.ts  types.ts
extension/src/popup/: popup.html  popup.tsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: collections.ts  posts.ts
frontend/src/components/: CollectionList.tsx  IngestStatusCard.tsx  PostGrid.tsx  PostModal.tsx  PostTile.tsx
frontend/src/lib/: hashRoute.ts
frontend/src/routes/: IngestPage.tsx
tests/: conftest.py  test_api_collections.py  test_api_ingest_extension.py  test_e3_discovery_endpoints.py  test_e4_enrichment_endpoints.py  test_e5_watch_authwatch.py  test_e6_status_endpoint.py  test_from_upload.py  test_ingest_state.py  test_migrations.py  test_notify_telegram.py  test_reconcile.py
tests/fixtures/fake-ig/: README.md
tests/fixtures/fake-ig/p/aaa111/: index.html
tests/fixtures/fake-ig/p/bbb222/: index.html
tests/fixtures/fake-ig/p/ccc333/: index.html
tests/fixtures/fake-ig/p/ddd444/: index.html
tests/fixtures/fake-ig/p/eee555/: index.html
tests/fixtures/fake-ig/you/saved/: index.html
tests/fixtures/fake-ig/you/saved/all-posts/: index.html
(+2 files in other folders)
