[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-logger"
version = "0.1.0"
description = "Self-hosted archiver for a single Instagram account's saved posts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gene Han", email = "gene@smtown.com" }]
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "instagrapi>=2.1",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "vcrpy>=6.0",
    "ruff>=0.6",
]
# Web-API client we explored as a fallback when instagrapi's mobile-API
# path is locked by IG's anti-automation. See SESSION_HANDOFF.md ("Auth
# blocker, 2026-05-07") and `backend/ig_client/smoke_instaloader.py`.
web-fallback = [
    "instaloader>=4.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "frontend*", "data*", "ops*", ".omc*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
